// Vitest Snapshot v1

exports[`can load simple \`.cjs\` config in esm environment 1`] = `
{
  "filename": "simple2.config.cjs",
  "option": "simple2",
}
`;

exports[`can load simple \`.cts\` config in esm environment 1`] = `
{
  "filename": "simple4.config.cts",
  "option": "simple4",
}
`;

exports[`can load simple \`.js\` config in commonjs environment 1`] = `
{
  "filename": "simple.config.js",
  "option": "simple",
}
`;

exports[`can load simple \`.js\` config in esm environment 1`] = `
{
  "filename": "simple.config.js",
  "option": "simple",
}
`;

exports[`can load simple \`.mjs\` config in commonjs environment 1`] = `
{
  "filename": "simple2.config.mjs",
  "option": "simple2",
}
`;

exports[`can load simple \`.mts\` config in commonjs environment 1`] = `
{
  "filename": "simple4.config.mts.js",
  "option": "simple4",
}
`;

exports[`can load simple \`.ts\` config in commonjs environment 1`] = `
{
  "filename": "simple3.config.ts",
  "option": "simple3",
}
`;

exports[`can load simple \`.ts\` config in esm environment 1`] = `
{
  "filename": "simple3.config.ts",
  "option": "simple3",
}
`;
